git hub message at the bottom of screen

--- a/index.html
+++ b/index.html
@@ -152,5 +152,9 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <p>View this project on GitHub: <a href="https://github.com/DonutL0rd/CrevexMemory" target="_blank">Memory Trainer on GitHub</a></p>
+    </footer>
 </body>
 </html>
